<resources>
    <string name="app_name">ChatApp2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_app">Chat App</string>
    <string name="logout">Logout</string>
    <string name="account_setting">Account Setting</string>
    <string name="login_in_account">Login in Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="new_user_account">New User Account</string>
    <string name="if_already_have_an_account">if Already have an Account ?</string>
    <string name="hello">Hello</string>
    <string name="set_image">Set Image</string>
    <string name="profile">Profile</string>
    <string name="type_message">Type message</string>
    <string name="todo">TODO</string>
</resources>
