<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">


    <TextView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/circle"
        android:text="@string/chat_app"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_margin="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/fifteen_dp"
        android:textColor="@color/black"
        android:text="@string/new_user_account"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btNewReg"
        android:layout_marginBottom="@dimen/fifteen_dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/create"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/fifteen_dp"
        android:textSize="20sp"
        android:text="@string/if_already_have_an_account"/>
    <Button
        android:id="@+id/StartLoginBtn"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/login"/>


</LinearLayout>